# stralg-in-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
stralg/: __init__.py  aho_corasick.py  aho_corasick_test.py  trie.py  trie_test.py
stralg/bv/: __init__.py  bv.py
stralg/searching/: __init__.py  ba.py  ba_test.py  bits.py  bits_test.py  bmh.py  bmh_test.py  kmp.py  kmp_test.py  plain.py  plain_test.py  rabin_karp.py  rabin_karp_test.py
stralg/suffix_tree/: mccreight.py  naive.py  suffix_tree.py  suffix_tree_test.py
stralg/tries/: aho_corasick.py  aho_corasick_test.py  trie.py  trie_test.py
stralg/views/: __init__.py  alphabet.py  alphabet_test.py  string.py
test/: __init__.py  helpers.py  search.py
