[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stralg"
version = "0.1.0"
description = "String algorithms in Python"
authors = [{name = "Thomas Mailund", email = "thomas@mailund.dk"}]
requires-python = ">= 3.12"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
python_classes = ["Test"]
python_functions = ["test_"]
python_files = ["*_test.py",]
addopts = ["--cov=stralg", "--cov-report=term-missing"]